<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_live_chart"
        android:icon="@drawable/ic_chart"
        android:title="@string/nav_live_chart" />
    <item
        android:id="@+id/nav_map_tracking"
        android:icon="@drawable/ic_map"
        android:title="@string/nav_map_tracking" />
    <item
        android:id="@+id/nav_alert"
        android:icon="@drawable/ic_alert"
        android:title="@string/nav_alert" />
    <item
        android:id="@+id/nav_report"
        android:icon="@drawable/ic_report"
        android:title="@string/nav_report" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
